--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -28,6 +28,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
+vars:
+    logging_level: INFO
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
@@ -37,3 +39,4 @@ models:
       example:
           +materialized: view
           +required_tests: {'unique': 1, 'not_null': 2}
+          +required_docs: true
