--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,18 +1,13 @@
 
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
+# Project name.
 name: 'dbt_meta_testing'
-version: '1.0.0'
+version: '0.1.2'
 config-version: 2
 
-# This setting configures which "profile" dbt uses for this project.
+# The "profile" dbt uses for this project.
 profile: 'dbt_meta_testing'
 
-# These configurations specify where dbt should look for different types of files.
-# The `source-paths` config, for example, states that models in this project can be
-# found in the "models/" directory. You probably won't need to change these!
-
+# Configuration paths.
 source-paths: ["models"]
 # source-paths: ["test_models"] # TO DO: Configure via scripts for integration testing
 analysis-paths: ["analysis"]
@@ -21,14 +16,10 @@ data-paths: ["data"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-target-path: "target"  # directory which will store compiled SQL files
-clean-targets:         # directories to be removed by `dbt clean`
+target-path: "target"
+clean-targets:         
     - "target"
     - "dbt_modules"
-
-
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
 
 # Configured for the logger macro.
 vars:
