POC on error handler

--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -10,6 +10,7 @@ config-version: 2
 
 source-paths: ["models"]
 macro-paths: ["macros"]
+test-paths: ["tests"]
 
 target-path: "target"
 clean-targets: ["target", "dbt_modules"]
