--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -17,4 +17,8 @@ clean-targets: ["target", "dbt_modules"]
 
 models:
   dbt_meta_testing_integration_tests:
-    +required_docs: false
+    +required_docs: true
+    staging:
+      +required_tests: {"unique": 1}
+    marts:
+      +required_tests: true
