--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
-    working-dir: ./integration_tests
     env:
       DBT_PROFILES_DIR: . # Use integration_tests/profiles.yml
 
@@ -32,5 +31,6 @@ jobs:
         CI_SNOWFLAKE_DBT_DATABASE: ${{ secrets.CI_SNOWFLAKE_DBT_DATABASE }}
         CI_SNOWFLAKE_DBT_WAREHOUSE: ${{ secrets.CI_SNOWFLAKE_DBT_WAREHOUSE }}
       run: |
+        cd integration_tests
         dbt deps
         dbt test --data
