--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,15 +1,15 @@
 
 # Project name.
 name: 'dbt_meta_testing'
-version: '0.1.2'
+version: '0.2.0'
 config-version: 2
+require-dbt-version: ">=0.19.0"
 
 # The "profile" dbt uses for this project.
 profile: 'dbt_meta_testing'
 
 # Configuration paths.
 source-paths: ["models"]
-# source-paths: ["test_models"] # TO DO: Configure via scripts for integration testing
 analysis-paths: ["analysis"]
 test-paths: ["tests"]
 data-paths: ["data"]
@@ -21,15 +21,6 @@ clean-targets:
     - "target"
     - "dbt_modules"
 
-# Configured for the logger macro.
+# Configured for the dbt_meta_testing.logger macro.
 vars:
     logging_level: INFO
-
-# TO DO: Configure via scripts for integration testing
-# models:
-#   dbt_meta_testing:
-#       # Applies to all files under models/example/
-#       example:
-#           +materialized: view
-#           +required_tests: {'unique': 1, 'not_null': 2, 'mock_schema_test': 1}
-#           +required_docs: true
