--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -22,6 +22,11 @@ models:
       +required_tests: true
     marts:
       +required_tests: {"unique": 1}
+      model_2:
+        +required_tests: 
+          "mocker.*|unique": 1
+          "mock_schema_test": 1
+          ".*data_test": 1 
 
 vars:
   running_intergration_tests: true
