--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -19,8 +19,8 @@ jobs:
       with: 
         python-version: 3.8
     
-    - name: Install dbt 0.19.0
-      run: pip install dbt==0.19.0
+    - name: Install dbt
+      run: pip install -r requirements.txt
 
     - name: Run and Test
       env: 
