--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -30,4 +30,7 @@ models:
 
 vars:
   running_intergration_tests: true
-  dbt_meta_test_dispatch_list: ["dbt_meta_testing_integration_tests"]
+  
+dispatch:
+  - macro_namespace: dbt_meta_testing
+    search_order: ['dbt_meta_testing']  # enable override
