--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -3,7 +3,7 @@
 name: 'dbt_meta_testing'
 version: '0.2.0'
 config-version: 2
-require-dbt-version: ">=0.19.0"
+require-dbt-version: [">=0.20.0", "<0.21.0"]
 
 # The "profile" dbt uses for this project.
 profile: 'dbt_meta_testing'
