--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -8,7 +8,7 @@ profile: 'integration_tests'
 
 config-version: 2
 
-source-paths: ["models"]
+model-paths: ["models"]
 macro-paths: ["macros"]
 test-paths: ["tests"]
 
@@ -23,14 +23,14 @@ models:
     marts:
       +required_tests: {"unique": 1}
       model_2:
-        +required_tests: 
+        +required_tests:
           "mocker.*|unique": 1
           "mock_schema_test": 1
-          ".*data_test": 1 
+          ".*data_test": 1
 
 vars:
   running_intergration_tests: true
-  
+
 dispatch:
   - macro_namespace: dbt_meta_testing
     search_order: ['dbt_meta_testing']  # enable override
