--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9.6
 
     - name: Install dbt
       run: pip install -r requirements.txt
@@ -33,4 +33,4 @@ jobs:
       run: |
         cd integration_tests
         dbt deps
-        dbt test -s test_type:generic
+        dbt test -s test_type:singular
